--- a/bit.css
+++ b/bit.css
@@ -17,3 +17,27 @@ h1{
 
 }
 
+#container{
+    height:525px;
+    width: 360px;
+    margin: 100px auto;
+    background: #f7f7f7;
+    /* box-shadow: 5px 5px 5px var(--tetriary-color); */
+    border-radius: 20px;
+}
+
+.title{
+    background: var(--tetriary-color);
+    color: var(--secondary-color);
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: normal;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    text-align: center;
+}
+
+.tipsform{
+    
+}
