--- a/bit.css
+++ b/bit.css
@@ -72,3 +72,9 @@ h1 {
     font-size: 17px;
     color: white;
 }
+
+#totalTip {
+    font-size: 20px;
+    margin-top: 5px;
+    text-align: center;
+}
